--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
-   <title></title>
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Site test</title>
    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
    <h1>Un super titre</h1>
 </body>
-
 </html>
